Journal Entry form is now adding to api

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,5 @@
-.main {
-    display: flex;
-}
+@import "./entries.css";
 
-.formAndEntry{
-    flex: 3;
-}
-
-.form{
-    border: black;
-    padding: 2em;
-}
-
-.entries{
-    padding: 2em;
-}
-
-.listOfEntries{
-    flex: 3;
-}
 .header {
     display: flex;
     flex-wrap: wrap;
@@ -32,3 +14,39 @@
      font-size: 5em;
      font-family: 'Homemade Apple', cursive;
  }
+
+ body,
+ button,
+ input,
+ select,
+ textarea {
+     color: #557a95;
+     font-family: "Comfortaa", Arial, sans-serif;
+     font-size: 1rem;
+     line-height: 1.5;
+ }
+ 
+ input {
+     width: 36.5rem;
+ }
+ select{
+    width: 36.5rem;
+ }
+
+ button{
+    width: 36.5rem;
+ }
+ 
+ textarea {
+     width: 36.5rem;
+     height: 7rem;
+ }
+ 
+ h1,h2,h3,h4,h5,h6 {
+   font-family: "Patua One", serif;
+   letter-spacing: 2px;
+   color:  #7395ae;
+ }
+ 
+
+ 
