--- a/styles/entries.css
+++ b/styles/entries.css
@@ -1,8 +1,13 @@
+.formAndEntry{
+    display: flex;
+}
+
 .form {
     margin: 0 auto;
     max-width: 50%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .journalEntry{
@@ -10,5 +15,17 @@
     border: 1px dotted;
     padding: 0.75rem;
     margin: 1rem 0; 
+}
+
+.journalFlower{
+    width: 16rem;
+    height: 7rem;
+}
+
+.entries{
+    border: dotted #5d5c61;
+    padding: 1rem;
+    width: 30rem;
+    justify-content: center;
 }
 
