--- a/styles/entries.css
+++ b/styles/entries.css
@@ -1,9 +1,12 @@
 .formAndEntry{
     display: flex;
+    border: dotted #5d5c61;
+    padding: 1rem;
+    width: 45rem;
+    margin: 0 auto;
 }
 
 .form {
-    margin: 0 auto;
     max-width: 50%;
     display: flex;
     flex-direction: column;
@@ -18,7 +21,6 @@
 
 .journalEntry{
     color: #557a95;
-    border: 1px dotted;
     padding: 0.75rem;
     margin: 1rem 0;
 
